add docker image name for symfony

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./mysql:/var/lib/mysql
 
   php:
+    image: symfonyperso
     container_name: symfony
     build:
       context: ./app
