--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '3.8'
 services:
   db:
     image: mysql:5.7
-    container_name: docker-test-db
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: docker-test-db
@@ -12,16 +11,11 @@ services:
     volumes:
       - ./mysql:/var/lib/mysql
     deploy:
-      mode: replicated
-      replicas: 2
       restart_policy:
         condition: on-failure
 
   php:
-    image: symfonyperso
-    container_name: symfony
-    build:
-      context: ./app
+    image: ulysseguillot/symfony6:latest
     ports:
       - '9000:9000'
     volumes:
@@ -29,13 +23,10 @@ services:
     depends_on:
       - db
     deploy:
-      mode: replicated
-      replicas: 2
       restart_policy:
         condition: on-failure
 
   nginx:
-    container_name: docker-test-nginx
     image: nginx:stable-alpine
     ports:
       - '80:80'
@@ -46,7 +37,5 @@ services:
       - php
       - db
     deploy:
-      mode: replicated
-      replicas: 2
       restart_policy:
         condition: on-failure
