--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,14 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:13
+    image: mysql:5.7
     environment:
-      POSTGRES_DB: docker-test-db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: pass
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_DATABASE: docker-test-db
     ports:
-      - '5432:5432'
+      - '3306:3306'
     volumes:
-      - ./postgresql:/var/lib/postgresql/data
+      - ./mysql:/var/lib/mysql
 
   php:
     image: ulysseguillot/symfony6:latest
