deploy config in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,37 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: docker-test-db
+    networks:
+      - net
     ports:
       - '3306:3306'
     volumes:
       - ./mysql:/var/lib/mysql
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
 
   php:
     image: ulysseguillot/symfony6:latest
     #build: app/.
+    networks:
+      - net
     ports:
       - '9000:9000'
     volumes:
       - ./app:/var/www
     depends_on:
       - db
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
 
   nginx:
     image: nginx:stable-alpine
+    networks:
+      - net
     ports:
       - '80:80'
     volumes:
@@ -31,3 +45,10 @@ services:
     depends_on:
       - php
       - db
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+
+networks:
+  net:
